# python-parsinghook

./: README.md  setup.cfg
src/: parsinghook.pth
src/parsinghook/: _test.py  dumpast.py  hook.py  test.py
