[metadata]
name = parsinghook
version = 0.9.0
author = Doug Swarin
author_email = dswarin@gmail.com
description = Python parsing hook
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/acaos/python-parsinghook
project_urls =
    Bug Tracker = https://github.com/acaos/python-parsinghook/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
